--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,3 +1,37 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron text-center">
+  <h1>
+    Mean Boilerplate
+  </h1>
+  <p class="lead"></p>
+  <div>
+    <a class="btn btn-primary" [routerLink]="['/register']">Register</a>
+    <a class="btn btn-dark" [routerLink]="['/login']">Login</a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3>
+      Express 4 Backend
+    </h3>
+    <p>
+      test
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h3>
+      Angular 4 CLI based structure
+    </h3>
+    <p>
+
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h3>
+      Passport JWT Authentication
+    </h3>
+    <p>
+
+    </p>
+  </div>
+</div>
