--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,3 +1,26 @@
-<p>
-  login works!
-</p>
+<h2 class="page-header">
+  Login
+</h2>
+<form novalidate (ngSubmit)="onLoginSubmit(f)" #f="ngForm">
+  <div class="form-group">
+    <label for="userName">User Name</label>
+    <input type="text" name="userName" class="form-control" [(ngModel)]="userName" #uUserName="ngModel" minlength="5" required>
+    <div class="alert alert-danger" *ngIf="uUserName.errors?.required && uUserName.touched">
+      User Name is required.
+    </div>
+    <div class="alert alert-danger" *ngIf="uUserName.errors?.minlength && uUserName.touched">
+      User Name should be at least 5 characters long.
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" name="password" class="form-control" [(ngModel)]="password" #uPassword="ngModel" minlength="8" required>
+    <div class="alert alert-danger" *ngIf="uPassword.errors?.required && uPassword.touched">
+      Password is required.
+    </div>
+    <div class="alert alert-danger" *ngIf="uPassword.errors?.minlength && uPassword.touched">
+      User Name should be at least 8 characters long.
+    </div>
+  </div>
+  <input type="submit" value="Login" class="btn btn-primary">
+</form>
